cmake_minimum_required(VERSION 3.26)
project(Math)

set(CMAKE_CXX_STANDARD 17)

add_executable(Math main.cpp
        "Sec 1/1.cpp"
        "Sec 1/2.cpp"
        "Sec 1/3.cpp"
        "Sec 1/4.cpp"
        "Sec 1/5.cpp"
        "Sec 2/2.1.cpp"
        "Sec 3/3.3.cpp"
        "Sec 3/3.2.cpp"
        "Sec 3/3.1.cpp"
        "Sec 4/1.cpp"
        "Sec 4/2.cpp"
        "Sec 4/3.cpp"
        "Sec 4/2.1.cpp"
        "Sec 5/5.1.cpp"
        "Sec 5/5.2.cpp"
        "Sec 5/5.3.cpp"
        "Sec 4/4.cpp"
        "Sec 4/5.cpp"
        exam/1.cpp
        exam/2.cpp
        "Sec 6/6.2.cpp"
        "Sec 6/6.1.cpp"
        "Sec 6/6.3_unknow.cpp"
        "Sec 7/7.2.cpp"
        "Sec 7/7.3.cpp"
        "Sec 7/7.4.cpp"
)
