cmake_minimum_required(VERSION 3.26)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm main.cpp
        "Sec 1/6.cpp"
        "Sec 1/7.cpp"
        "Sec 1/8.cpp"
        "Sec 2/1.cpp"
        "Sec 2/2.cpp"
        "Sec 2/3.cpp"
        "Sec 2/4.cpp"
        "Sec 2/5.cpp"
        "Sec 2/6.cpp"
        "Sec 2/7.cpp"
        "Sec 2/7_2.cpp"
        "Sec 3/1.cpp"
        "Sec 3/2.cpp"
        "Sec 3/2.1.cpp"
        "Sec 3/3.cpp"
        "Sec 3/4.cpp"
        "Sec 3/4.1.cpp"
        "Sec 3/5.cpp"
        "Sec 3/6.cpp"
        "Sec 3/7.1.cpp"
        "Sec 4/4.1.cpp"
        "Sec 4/4.2.cpp"
        "Sec 5/5.1.cpp"
        "Sec 5/5.2.cpp"
        "Sec 5/5.3.cpp"
        "Sec 5/5.4.cpp"
        "Sec 5/5.5.cpp"
        "Sec 5/5.6.cpp"
        "Sec 6/6.2.cpp"
        "Sec 6/6.3.cpp"
)
